--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc
+
+      - name: Build C shared library
+        run: |
+          gcc -shared -o tests/c/mt19937ar.so -fPIC tests/c/mt19937ar.c
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -30,7 +39,7 @@ jobs:
           pip install --upgrade pip
           pip install pipenv
 
-      - name: Install dependencies
+      - name: Install pipenv dependencies
         run: pipenv install --dev
 
       - name: Run test
